<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:background="@color/white"
        android:id="@+id/navigation_home"
        android:name="eu.coach_yourself.app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:background="@color/white"
        android:id="@+id/navigation_setting"
        android:name="eu.coach_yourself.app.fragment.SettingsFragment"
        android:label="@string/title_setting"
        tools:layout="" />

    <fragment
        android:background="@color/white"
        android:id="@+id/navigation_graph"
        android:name="eu.coach_yourself.app.ui.graph.GraphFragment"
        android:label="@string/title_graph"
        tools:layout="@layout/fragment_graph" />

    <fragment
        android:background="@color/white"
        android:id="@+id/navigation_motivator"
        android:name="eu.coach_yourself.app.fragment.MotivatorFragment"
        android:label="@string/title_graph"
        tools:layout="@layout/fragment_motivator" />

    <fragment
        android:background="@color/white"
        android:id="@+id/navigation_fav"
        android:name="eu.coach_yourself.app.fragment.FavFragment"
        android:label="@string/title_graph"
        tools:layout="@layout/fragment_fav" />
</navigation>