<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_remind"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundstarfree"
    android:orientation="vertical"
    tools:context=".fragment.ReminderScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="?attr/homeAsUpIndicator">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="?android:attr/actionBarSize"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:text="@string/Motivatoreinrichten"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbarId"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/remind_title1"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/edit_remind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@color/gray"
                android:layout_marginBottom="10dp"
                android:background="@drawable/gray_border_bg"
                android:fontFamily="@font/rubik_regular"
                android:hint="@string/remind_title2"
                android:padding="12dp"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_remind"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/gray_border_bg"
                android:orientation="vertical">

                <TimePicker
                    android:theme="@style/CustomTimePickerStyle"
                    android:id="@+id/timepicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:timePickerMode="spinner" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/remind_title3"
                    android:textSize="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/btn_d1"
                            android:layout_width="@dimen/motive_hight"
                            android:layout_height="@dimen/motive_hight"
                            android:layout_marginLeft="1dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginBottom="2dp"
                            android:background="@drawable/toggle_button"
                            android:fontFamily="@font/rubik_regular"
                            android:gravity="center"
                            android:text="@string/Mo"
                            android:textAllCaps="false"
                            android:textColor="@drawable/text_toggle_button"
                            android:textSize="@dimen/motive_text_size" />

                        <TextView
                            android:id="@+id/btn_d2"
                            android:layout_width="@dimen/motive_hight"
                            android:layout_height="@dimen/motive_hight"
                            android:layout_marginLeft="1dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginBottom="2dp"
                            android:background="@drawable/toggle_button"
                            android:checked="false"
                            android:fontFamily="@font/rubik_regular"
                            android:gravity="center"
                            android:text="@string/Tu"
                            android:textAllCaps="false"
                            android:textColor="@drawable/text_toggle_button"
                            android:textSize="@dimen/motive_text_size" />

                        <TextView
                            android:id="@+id/btn_d3"
                            android:layout_width="@dimen/motive_hight"
                            android:layout_height="@dimen/motive_hight"
                            android:layout_marginLeft="1dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginBottom="2dp"
                            android:background="@drawable/toggle_button"
                            android:checked="false"
                            android:fontFamily="@font/rubik_regular"
                            android:gravity="center"
                            android:text="@string/We"
                            android:textAllCaps="false"
                            android:textColor="@drawable/text_toggle_button"
                            android:textSize="@dimen/motive_text_size" />

                        <TextView
                            android:id="@+id/btn_d4"
                            android:layout_width="@dimen/motive_hight"
                            android:layout_height="@dimen/motive_hight"
                            android:layout_marginLeft="1dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginBottom="2dp"
                            android:background="@drawable/toggle_button"
                            android:checked="false"
                            android:fontFamily="@font/rubik_regular"
                            android:gravity="center"
                            android:text="@string/Th"
                            android:textAllCaps="false"
                            android:textColor="@drawable/text_toggle_button"
                            android:textSize="@dimen/motive_text_size" />

                        <TextView
                            android:id="@+id/btn_d5"
                            android:layout_width="@dimen/motive_hight"
                            android:layout_height="@dimen/motive_hight"
                            android:layout_marginLeft="1dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginBottom="2dp"
                            android:background="@drawable/toggle_button"
                            android:checked="false"
                            android:fontFamily="@font/rubik_regular"
                            android:gravity="center"
                            android:text="@string/Fr"
                            android:textAllCaps="false"
                            android:textColor="@drawable/text_toggle_button"
                            android:textSize="@dimen/motive_text_size" />

                        <TextView
                            android:id="@+id/btn_d6"
                            android:layout_width="@dimen/motive_hight"
                            android:layout_height="@dimen/motive_hight"
                            android:layout_marginLeft="1dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginBottom="2dp"
                            android:background="@drawable/toggle_button"
                            android:checked="false"
                            android:fontFamily="@font/rubik_regular"
                            android:gravity="center"
                            android:text="@string/Sa"
                            android:textAllCaps="false"
                            android:textColor="@drawable/text_toggle_button"
                            android:textSize="@dimen/motive_text_size" />

                        <TextView
                            android:id="@+id/btn_d7"
                            android:layout_width="@dimen/motive_hight"
                            android:layout_height="@dimen/motive_hight"
                            android:layout_marginLeft="1dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginRight="1dp"
                            android:layout_marginBottom="2dp"
                            android:background="@drawable/toggle_button"
                            android:checked="false"
                            android:fontFamily="@font/rubik_regular"
                            android:gravity="center"
                            android:text="@string/Su"
                            android:textAllCaps="false"
                            android:textColor="@drawable/text_toggle_button"
                            android:textSize="@dimen/motive_text_size" />

                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/transbutton_bg"
                    android:fontFamily="@font/rubik_medium"
                    android:gravity="center_vertical"
                    android:text="@string/Delete"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/fill_button_bg"
                    android:fontFamily="@font/rubik_medium"
                    android:gravity="center"
                    android:text="@string/Save"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
